Change the overflow property for the user list to fix the issue with list displacement when the scroll bar appears

--- a/src/components/Users.module.css
+++ b/src/components/Users.module.css
@@ -59,7 +59,7 @@ input {
 
 ul {
   width: 100%;
-  overflow-y: auto;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   align-items: center;
